# NotesApp

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  docker-setting-up.sh  dockerfile  mypy.ini  pyproject.toml  run-celery.sh
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 58405d9efec4_init.py  6c53b88cca9a_initial_migration.py  80adf5dfab3b_email_was_added_to_users_table.py  b2f23a50f099_init.py  e29975b50ded_init.py
src/notes_app/: __main__.py  auth.py  authorization.py  reg.py  scheduler.py
src/notes_app/api/: providers.py
src/notes_app/api/models/: note_schema.py  user_schema.py
src/notes_app/api/routers/: auth_routers.py  note_routers.py
src/notes_app/application/: note.py
src/notes_app/application/note/: note.py  note_exceptions.py
src/notes_app/application/user/: auth.py  reg.py  user_exceptions.py
src/notes_app/database/: models.py  notes_app_database.db  tx_manager.py
src/notes_app/database/repositories/: note_repo.py  user_repo.py
src/notes_app/infrastructure/: config.py
src/notes_app/infrastructure/database/: main.py  tx_manager.py
src/notes_app/infrastructure/database/models/: note_table.py  user_table.py
src/notes_app/infrastructure/database/repositories/: celery_repo.py  note_repo.py  user_repo.py
src/notes_app/infrastructure/kafka_services/: config.py  consumer.py  notifier.py  producer.py
src/notes_app/infrastructure/mongo_services/: mongo_client.py
src/notes_app/infrastructure/mongo_services/models/: note_model.py
src/notes_app/infrastructure/redis_services/: cache_manager.py  redis_client.py
src/notes_app/infrastructure/scheduler/: beat_schedule.py  celery_app.py  setup.py  task.py  tasks.py
src/notes_app/kafka_services/: config.py  consumer.py  notifier.py  producer.py
src/notes_app/schemas/: user.py
src/notesplus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
