[project]
name = "notesplus"
version = "0.1.0"
description = "Notes application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "kafka-python>=2.1.5",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
lint = [
    "ruff>=0.11.8",
]
